# wechatpy

./: pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: github.py
docs/: changelog.rst
examples/wxjs/main/: views.py
tests/: test_client.py  test_component_api.py  test_deserialize_reply.py  test_events.py  test_external_contact.py  test_fields.py  test_oauth.py  test_payment.py  test_replies.py  test_send_messages.py  test_work_client.py  test_work_parser.py
wechatpy/: component.py  events.py  exceptions.py  fields.py  messages.py  oauth.py  parser.py  replies.py  schemes.py  utils.py
wechatpy/client/: __init__.py  base.py
wechatpy/client/api/: card.py  cloud.py  device.py  draft.py  freepublish.py  invoice.py  marketing.py  material.py  media.py  message.py  misc.py  poi.py  qrcode.py  shakearound.py  tag.py  template.py  user.py  wxa.py
wechatpy/pay/: __init__.py  utils.py
wechatpy/pay/api/: appauth.py  coupon.py  jsapi.py  transfer.py  withhold.py
wechatpy/work/client/api/: __init__.py  appchat.py  calendar.py  department.py  email.py  export.py  external_contact.py  external_contact_group_chat.py  invoice.py  kf.py  kf_message.py  media.py  message.py  oa.py  schedule.py  tag.py
wechatpy/work/services/: __init__.py
