[tool.poetry]
name = "wechatpy"
version = "2.0.0.alpha26"
description = "WeChat SDK for Python"
authors = ["messense <messense@icloud.com>"]
license = "MIT"
readme = 'README.md'
keywords = ["wechat", "weixin", "wechat SDK", "weixin SDK"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]
repository = "https://github.com/wechatpy/wechatpy.git"
homepage = "https://github.com/wechatpy/wechatpy"
documentation = "http://docs.wechatpy.org"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"

[tool.poetry.dependencies]
python = ">=3.8,<4"
requests = ">=2.32.3"
xmltodict = ">=0.13.0"
optionaldict = ">=0.1.2"
python-dateutil = ">=2.9.0"
cryptography = ">=43.0.1"
requests-pkcs12 = "^1.25"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
httmock = "^1.4.0"
coverage = "^7.6.1"
redis = "^5.0.9"
pymemcache = "^4.0.0"

[tool.poetry.urls]
issues = "https://github.com/wechatpy/wechatpy/issues"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

